ADD_EXECUTABLE(Animals_test test.cpp)
TARGET_LINK_LIBRARIES(Animals_test PluginTest)

# Generate file with path to the plugin
IF (${CMAKE_MAJOR_VERSION} VERSION_LESS 3)
  FILE(GENERATE OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/path.hpp" INPUT ${CMAKE_CURRENT_SOURCE_DIR}/path.hpp.in)
ELSE()
  FILE(GENERATE OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/$<CONFIG>/path.hpp" INPUT ${CMAKE_CURRENT_SOURCE_DIR}/path.hpp.in)
  TARGET_INCLUDE_DIRECTORIES(Animals_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/$<CONFIG>)
ENDIF()